--- a/ngrams_with_pyspark.ipynb
+++ b/ngrams_with_pyspark.ipynb
@@ -23,7 +23,7 @@
         "\n",
         "We will utilize the PySpark distribution provided by `pip` with its integrated Spark engine running as a single Java virtual machine in _pseudo-distributed mode_.\n",
         "\n",
-        "More questions on PySpark are answered in [PySpark on Google Colab](https://github.com/groda/big_data/blob/master/PySpark_On_Google_Colab.ipynb)."
+        "More questions on PySpark are answered in the tutorial [PySpark on Google Colab](https://github.com/groda/big_data/blob/master/PySpark_On_Google_Colab.ipynb)."
       ],
       "metadata": {
         "id": "Vvgkiyb9MnxG"
