--- a/generate_data_with_Faker.ipynb
+++ b/generate_data_with_Faker.ipynb
@@ -46,7 +46,7 @@
       ],
       "metadata": {
         "id": "7EOLVOTe7KnP",
-        "outputId": "6afff2fa-67a2-4294-a74b-fc7e664b2706",
+        "outputId": "b72af9eb-9fa4-46ed-da58-1d497c43fe8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -59,7 +59,7 @@
           "text": [
             "Collecting faker\n",
             "  Downloading Faker-23.2.1-py3-none-any.whl (1.7 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m11.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m18.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: python-dateutil>=2.4 in /usr/local/lib/python3.10/dist-packages (from faker) (2.8.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.4->faker) (1.16.0)\n",
             "Installing collected packages: faker\n",
@@ -130,7 +130,7 @@
         "id": "0bSXBUI469kG"
       },
       "source": [
-        "Import pandas to dave data into a dataframe"
+        "Import Pandas to save data into a dataframe"
       ]
     },
     {
@@ -141,6 +141,12 @@
       },
       "outputs": [],
       "source": [
+        "# true if running on Google Colab\n",
+        "import sys\n",
+        "IN_COLAB = 'google.colab' in sys.modules\n",
+        "if not IN_COLAB:\n",
+        " !pip install pandas==1.5.3\n",
+        "\n",
         "import pandas as pd"
       ]
     },
@@ -189,7 +195,7 @@
       "execution_count": 6,
       "metadata": {
         "id": "wXP-5uSg69kH",
-        "outputId": "fd2a4c74-2e70-4fbe-e98c-5ff5ae542acd",
+        "outputId": "e5d284c3-2587-451d-aab8-45f9ba7c99d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -230,7 +236,7 @@
       "execution_count": 7,
       "metadata": {
         "id": "JtRWDEsT69kI",
-        "outputId": "8ca6213f-d827-4e43-efae-e73713bb5441",
+        "outputId": "75fc519b-a19c-4fcf-db0e-13d98f394f8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -240,8 +246,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 375 ms, sys: 5.22 ms, total: 380 ms\n",
-            "Wall time: 390 ms\n"
+            "CPU times: user 358 ms, sys: 1.2 ms, total: 359 ms\n",
+            "Wall time: 366 ms\n"
           ]
         }
       ],
@@ -264,7 +270,7 @@
       "execution_count": 8,
       "metadata": {
         "id": "RJK93FxW69kI",
-        "outputId": "fdbaf5ac-4830-4099-9533-63d4b222b09d",
+        "outputId": "50d3d1ef-24e6-485c-a43e-40470594cd4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
@@ -305,7 +311,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7ff0240a-55e5-45ad-a1a8-1e1ea3282507\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cf796d22-0e4e-4a19-a092-cc107f499ee6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -427,7 +433,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7ff0240a-55e5-45ad-a1a8-1e1ea3282507')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cf796d22-0e4e-4a19-a092-cc107f499ee6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -479,12 +485,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7ff0240a-55e5-45ad-a1a8-1e1ea3282507 button.colab-df-convert');\n",
+              "        document.querySelector('#df-cf796d22-0e4e-4a19-a092-cc107f499ee6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7ff0240a-55e5-45ad-a1a8-1e1ea3282507');\n",
+              "        const element = document.querySelector('#df-cf796d22-0e4e-4a19-a092-cc107f499ee6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -504,8 +510,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-39dd3f22-18ed-4180-9801-5b77b7ad7e31\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-39dd3f22-18ed-4180-9801-5b77b7ad7e31')\"\n",
+              "<div id=\"df-629f3186-a0ed-4821-acf8-af095e996579\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-629f3186-a0ed-4821-acf8-af095e996579')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -624,7 +630,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-39dd3f22-18ed-4180-9801-5b77b7ad7e31 button');\n",
+              "        document.querySelector('#df-629f3186-a0ed-4821-acf8-af095e996579 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -681,7 +687,7 @@
       ],
       "metadata": {
         "id": "PRKNcWR87h7P",
-        "outputId": "8c4d1f2c-9b74-4d89-ce7c-e2e07e50c060",
+        "outputId": "2d8a788c-2161-4248-9ba3-394464e38706",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -694,12 +700,12 @@
           "text": [
             "Collecting pyspark\n",
             "  Downloading pyspark-3.5.0.tar.gz (316.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m316.9/316.9 MB\u001b[0m \u001b[31m2.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m316.9/316.9 MB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
             "Building wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.5.0-py2.py3-none-any.whl size=317425345 sha256=ad015e215ea77c44cfe0726f542b2d0075aef9484386c3ece79c84776e9f9f5e\n",
+            "  Created wheel for pyspark: filename=pyspark-3.5.0-py2.py3-none-any.whl size=317425345 sha256=43bca49eea628a32285a1d5b22fa7ba997738b819fdaec8ab315e7075636d9d4\n",
             "  Stored in directory: /root/.cache/pip/wheels/41/4e/10/c2cf2467f71c678cfc8a6b9ac9241e5e44a01940da8fbb17fc\n",
             "Successfully built pyspark\n",
             "Installing collected packages: pyspark\n",
@@ -775,7 +781,7 @@
       "execution_count": 14,
       "metadata": {
         "id": "NDPqZqnl69kJ",
-        "outputId": "275ccdaf-2f5f-4219-e2a9-c28f0eb4756f",
+        "outputId": "377ebb1c-4dbe-41e1-fc4f-3af97042fc1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -813,7 +819,7 @@
       "execution_count": 15,
       "metadata": {
         "id": "KZtRuVeR69kJ",
-        "outputId": "a13b9161-d778-40a5-8589-e21f1c90adfe",
+        "outputId": "6f8a7dd0-02a8-4395-c7da-612365c8b082",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -823,8 +829,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 5.07 s, sys: 52.5 ms, total: 5.12 s\n",
-            "Wall time: 6.08 s\n"
+            "CPU times: user 5.9 s, sys: 58 ms, total: 5.95 s\n",
+            "Wall time: 7.63 s\n"
           ]
         }
       ],
@@ -859,7 +865,7 @@
       "execution_count": 16,
       "metadata": {
         "id": "Bt2HncFZ69kK",
-        "outputId": "8d1aeb09-7421-4a87-bece-36aefec3e001",
+        "outputId": "347815f8-00bc-4c77-8029-7a5a76f85b71",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -896,7 +902,7 @@
       "execution_count": 17,
       "metadata": {
         "id": "9YjvEOTV69kK",
-        "outputId": "216c55f1-1d94-4e95-8bf1-e07e30a536f8",
+        "outputId": "b0400b20-efa8-4feb-9e1f-c956efc222cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -928,7 +934,7 @@
       "execution_count": 18,
       "metadata": {
         "id": "BBdz-PJz69kK",
-        "outputId": "069562f5-7016-4e4c-f0d3-f0008214c120",
+        "outputId": "7bc09338-b81d-4e33-c87c-01422d1cc749",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -938,8 +944,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 4.83 s, sys: 25.7 ms, total: 4.86 s\n",
-            "Wall time: 5.06 s\n"
+            "CPU times: user 3.67 s, sys: 28 ms, total: 3.7 s\n",
+            "Wall time: 3.81 s\n"
           ]
         }
       ],
@@ -980,7 +986,7 @@
       "execution_count": 19,
       "metadata": {
         "id": "DyDn7tqS69kK",
-        "outputId": "16dd77ea-3cb7-4935-addb-bd68465e977e",
+        "outputId": "7ebe42de-a1a8-4933-dd89-128dd4ee530a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 186
@@ -1101,7 +1107,7 @@
       "execution_count": 20,
       "metadata": {
         "id": "0RYAfYsx69kL",
-        "outputId": "abef6b74-9ab9-4cb6-daaf-fcbe2684aef3",
+        "outputId": "8066ee10-f105-42fe-b514-fc750ecb4b13",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1148,7 +1154,7 @@
       "execution_count": 21,
       "metadata": {
         "id": "1lr4WKxt69kL",
-        "outputId": "57ecf668-57fc-40e3-d965-fda6a18341ae",
+        "outputId": "5a15bd58-23dc-46db-df7c-67ae48af6b42",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1195,7 +1201,7 @@
       "execution_count": 22,
       "metadata": {
         "id": "_6NsPWUt69kL",
-        "outputId": "909a82cb-2333-4faf-9df7-327641ea8c33",
+        "outputId": "0ed58e60-7a25-4d21-ee73-243da451e180",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1265,7 +1271,7 @@
       "execution_count": 24,
       "metadata": {
         "id": "j0XFMtOf69kT",
-        "outputId": "8ed5fc77-09ac-4324-e250-e9ae9c4bfb8c",
+        "outputId": "ac8da24a-aac3-4973-8ca2-53e89cecdc00",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1310,7 +1316,7 @@
       "execution_count": 26,
       "metadata": {
         "id": "gUS9h0A669kU",
-        "outputId": "0f147c72-72db-48a1-b5fb-7e91d18a3652",
+        "outputId": "70fa2cd9-98c9-4dd0-d441-052b1cf5e1e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1364,7 +1370,7 @@
       "execution_count": 28,
       "metadata": {
         "id": "8j35IGPd69kU",
-        "outputId": "6a85b0ae-459a-45c0-f445-1cf58125c700",
+        "outputId": "22ba1c61-b965-4c1d-9c77-8b4fc024cf40",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1420,7 +1426,7 @@
       "execution_count": 30,
       "metadata": {
         "id": "pKxvxwDK69kU",
-        "outputId": "07699dfa-7a05-4583-bb2c-c14b850ce6ac",
+        "outputId": "eddad2ac-a161-4b37-e650-5926d26329c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1430,8 +1436,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 2.34 s, sys: 19.7 ms, total: 2.36 s\n",
-            "Wall time: 2.61 s\n"
+            "CPU times: user 2.52 s, sys: 19.1 ms, total: 2.54 s\n",
+            "Wall time: 2.81 s\n"
           ]
         }
       ],
@@ -1449,7 +1455,7 @@
       "execution_count": 31,
       "metadata": {
         "id": "XbsEgC1d69kY",
-        "outputId": "b31e264b-3f2e-4244-fa72-e043c77dd644",
+        "outputId": "445f3b9f-cc72-4478-990f-76b7e34896c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1490,7 +1496,7 @@
       "execution_count": 32,
       "metadata": {
         "id": "Rut1uSF069kY",
-        "outputId": "026fa7f9-c024-4323-ed17-a67903e045c2",
+        "outputId": "3acfe637-7745-4a01-8ebe-c497b7c57bf0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1566,7 +1572,7 @@
       "execution_count": 34,
       "metadata": {
         "id": "Q3mJjr6q69kZ",
-        "outputId": "8d5cb221-a2d1-45b0-f0af-bc76ba68a45b",
+        "outputId": "181e5836-2a5a-4e30-8327-3bfb53da0e39",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1591,7 +1597,7 @@
       ],
       "metadata": {
         "id": "Pju4GyKL-DAn",
-        "outputId": "06502e9b-3806-4b69-9988-42f5ae801438",
+        "outputId": "90d5de7c-7ec2-46ef-d01b-fdae2507efc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1603,9 +1609,9 @@
           "name": "stdout",
           "text": [
             "total 172K\n",
-            "-rw-r--r-- 1 root root 71K Feb 25 21:38 part-00000-73dec932-1ca5-429f-85c2-94a0deaa321a-c000.snappy.parquet\n",
-            "-rw-r--r-- 1 root root 98K Feb 25 21:38 part-00001-73dec932-1ca5-429f-85c2-94a0deaa321a-c000.snappy.parquet\n",
-            "-rw-r--r-- 1 root root   0 Feb 25 21:38 _SUCCESS\n"
+            "-rw-r--r-- 1 root root 71K Feb 25 22:02 part-00000-8c909152-e1e6-4c4c-8a86-04e0a29cfdfc-c000.snappy.parquet\n",
+            "-rw-r--r-- 1 root root 98K Feb 25 22:02 part-00001-8c909152-e1e6-4c4c-8a86-04e0a29cfdfc-c000.snappy.parquet\n",
+            "-rw-r--r-- 1 root root   0 Feb 25 22:02 _SUCCESS\n"
           ]
         }
       ]
