--- a/generate_data_with_Faker.ipynb
+++ b/generate_data_with_Faker.ipynb
@@ -18,14 +18,17 @@
       "source": [
         "<a href=\"https://github.com/groda/big_data\"><div><img src=\"https://github.com/groda/big_data/blob/master/logo_bdb.png?raw=true\" align=right width=\"90\"></div></a>\n",
         "\n",
-        "# Need test data?\n",
+        "# Data Generation and Aggregation with Python's Faker Library and PySpark\n",
         "<br>\n",
         "<br>\n",
         "\n",
+        "Explore the capabilities of the Python Faker library (https://faker.readthedocs.io/) for dynamic data generation!\n",
         "\n",
-        "Here's a quick way to generate some fake data using the Python `Faker` library ([https://faker.readthedocs.io/](https://faker.readthedocs.io/)).\n",
+        "Whether you're a data scientist, engineer, or analyst, this tutorial will guide you through the process of creating realistic and diverse datasets using Faker and then harnessing the distributed computing capabilities of PySpark to aggregate and analyze the generated data.\n",
         "\n",
-        "**Note:** this is not _synthetic_ data as it is generated with simple methods and will most likely not fit any real-life distribution. Still, it can be useful for test purposes when no data is at hand."
+        "\n",
+        "\n",
+        "**Note:** This is not _synthetic_ data as it is generated using simple methods and will most likely not fit any real-life distribution. Still, it serves as a valuable resource for testing purposes when authentic data is unavailable."
       ]
     },
     {
@@ -51,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "7fbGCBoq69kF"
       },
@@ -111,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Bf7UTx_r69kG"
       },
@@ -135,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "PI_YqfM169kG"
       },
@@ -165,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "f1MiSZl069kG"
       },
@@ -192,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "wXP-5uSg69kH",
         "outputId": "e5d284c3-2587-451d-aab8-45f9ba7c99d5",
@@ -233,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "JtRWDEsT69kI",
         "outputId": "75fc519b-a19c-4fcf-db0e-13d98f394f8c",
@@ -267,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "RJK93FxW69kI",
         "outputId": "50d3d1ef-24e6-485c-a43e-40470594cd4a",
@@ -692,7 +695,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -716,7 +719,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "9drMVtgJ69kI"
       },
@@ -731,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "SYIUxAj569kI"
       },
@@ -751,7 +754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "qwaQQ2Ud69kJ"
       },
@@ -767,7 +770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "NM4OqVld69kJ"
       },
@@ -778,7 +781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "NDPqZqnl69kJ",
         "outputId": "377ebb1c-4dbe-41e1-fc4f-3af97042fc1b",
@@ -816,7 +819,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "KZtRuVeR69kJ",
         "outputId": "6f8a7dd0-02a8-4395-c7da-612365c8b082",
@@ -862,7 +865,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "Bt2HncFZ69kK",
         "outputId": "347815f8-00bc-4c77-8029-7a5a76f85b71",
@@ -899,7 +902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "9YjvEOTV69kK",
         "outputId": "b0400b20-efa8-4feb-9e1f-c956efc222cd",
@@ -931,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "BBdz-PJz69kK",
         "outputId": "7bc09338-b81d-4e33-c87c-01422d1cc749",
@@ -983,7 +986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "DyDn7tqS69kK",
         "outputId": "7ebe42de-a1a8-4933-dd89-128dd4ee530a",
@@ -1104,7 +1107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "0RYAfYsx69kL",
         "outputId": "8066ee10-f105-42fe-b514-fc750ecb4b13",
@@ -1151,7 +1154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "1lr4WKxt69kL",
         "outputId": "5a15bd58-23dc-46db-df7c-67ae48af6b42",
@@ -1198,7 +1201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "_6NsPWUt69kL",
         "outputId": "0ed58e60-7a25-4d21-ee73-243da451e180",
@@ -1242,7 +1245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "eXBHg-x269kL"
       },
@@ -1268,7 +1271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "j0XFMtOf69kT",
         "outputId": "ac8da24a-aac3-4973-8ca2-53e89cecdc00",
@@ -1301,7 +1304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "LHCsMtbR69kU"
       },
@@ -1313,7 +1316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "gUS9h0A669kU",
         "outputId": "70fa2cd9-98c9-4dd0-d441-052b1cf5e1e6",
@@ -1345,7 +1348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "PiSKooLQ69kU"
       },
@@ -1367,7 +1370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "8j35IGPd69kU",
         "outputId": "22ba1c61-b965-4c1d-9c77-8b4fc024cf40",
@@ -1399,7 +1402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "mBHUAB8Z69kU"
       },
@@ -1423,7 +1426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "pKxvxwDK69kU",
         "outputId": "eddad2ac-a161-4b37-e650-5926d26329c8",
@@ -1452,7 +1455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "XbsEgC1d69kY",
         "outputId": "445f3b9f-cc72-4478-990f-76b7e34896c3",
@@ -1493,7 +1496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "Rut1uSF069kY",
         "outputId": "3acfe637-7745-4a01-8ebe-c497b7c57bf0",
@@ -1549,7 +1552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "VcTsZQXI69kZ"
       },
@@ -1569,7 +1572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "Q3mJjr6q69kZ",
         "outputId": "181e5836-2a5a-4e30-8327-3bfb53da0e39",
@@ -1602,7 +1605,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1636,7 +1639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "MsCutnmw69kZ"
       },
