--- a/ngrams_with_pyspark.ipynb
+++ b/ngrams_with_pyspark.ipynb
@@ -607,7 +607,7 @@
         "\n",
         "## Comparing model sizes: a rough estimate of N-gram versus Transformer dimensions\n",
         "\n",
-        "An interesting point to note is that n-gram models have an order of magnitude smaller storage footprint compared to transformer models, especially in terms of model size. This discrepancy is apparent because transformers learn more intricate patterns, relationships, and context-aware representations, resulting in significantly larger model sizes.\n",
+        "An interesting point to note is that n-gram models have an order of magnitude smaller storage footprint compared to transformer models, especially in terms of model size. This discrepancy is not surprising given the fact that transformers learn more intricate patterns, relationships, and context-aware representations, resulting in significantly larger model sizes.\n",
         "\n",
         "Here are some rough estimates of model sizes just to get an idea:\n",
         "\n",
