--- a/MapReduce_Primer_HelloWorld.ipynb
+++ b/MapReduce_Primer_HelloWorld.ipynb
@@ -1352,21 +1352,11 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3 (ADBS23)",
-      "language": "python",
-      "name": "python3_adbs23"
+      "display_name": "Python 3",
+      "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "name": "python"
     },
     "colab": {
       "provenance": [],
