--- a/MapReduce_Primer_HelloWorld_bash.ipynb
+++ b/MapReduce_Primer_HelloWorld_bash.ipynb
@@ -86,6 +86,7 @@
         "echo -e \"Hello, World!\">hello.txt\n",
         "output_dir=\"output\"$(date +\"%Y%m%dT%H%M\")\n",
         "mapred streaming -input hello.txt -output output_dir >log 2>&1\n",
+        "sleep 5\n",
         "cat output_dir/part-00000"
       ]
     }
