--- a/MapReduce_Primer_HelloWorld_bash.ipynb
+++ b/MapReduce_Primer_HelloWorld_bash.ipynb
@@ -85,9 +85,8 @@
         "export JAVA_HOME=$(realpath $(which java) | sed 's/\\/bin\\/java$//')\n",
         "echo -e \"Hello, World!\">hello.txt\n",
         "output_dir=\"output\"$(date +\"%Y%m%dT%H%M\")\n",
-        "mapred streaming -input hello.txt -output output_dir >log 2>&1\n",
-        "sleep 5\n",
-        "cat output_dir/part-00000"
+        "mapred streaming -input hello.txt -output $output_dir >log 2>&1\n",
+        "cat $output_dir/part-00000"
       ]
     }
   ]
