--- a/MapReduce_Primer_HelloWorld_bash.ipynb
+++ b/MapReduce_Primer_HelloWorld_bash.ipynb
@@ -76,6 +76,7 @@
       ],
       "source": [
         "%%bash\n",
+        "set -x\n",
         "HADOOP_URL=\"https://dlcdn.apache.org/hadoop/common/stable/hadoop-3.3.6.tar.gz\"\n",
         "wget --quiet --no-clobber $HADOOP_URL >/dev/null\n",
         "[ ! -d $(basename $HADOOP_URL .tar.gz) ] && tar -xzf $(basename $HADOOP_URL)\n",
@@ -85,7 +86,7 @@
         "export JAVA_HOME=$(realpath $(which java) | sed 's/\\/bin\\/java$//')\n",
         "echo -e \"Hello, World!\">hello.txt\n",
         "output_dir=\"output\"$(date +\"%Y%m%dT%H%M\")\n",
-        "mapred streaming -input hello.txt -output $output_dir #>log 2>&1\n",
+        "mapred streaming -input hello.txt -output $output_dir >log 2>&1\n",
         "cat $output_dir/part-00000"
       ]
     }
