--- a/MapReduce_Primer_HelloWorld_bash.ipynb
+++ b/MapReduce_Primer_HelloWorld_bash.ipynb
@@ -87,6 +87,7 @@
         "echo -e \"Hello, World!\">hello.txt\n",
         "output_dir=\"output\"$(date +\"%Y%m%dT%H%M\")\n",
         "mapred streaming -input hello.txt -output $output_dir >log 2>&1\n",
+        "ls -lR output*\m,
         "cat $output_dir/part-00000"
       ]
     }
